example/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.istio.io/v1alpha3","kind":"VirtualService","metadata":{"annotations":{},"name":"httpbin","namespace":"default"},"spec":{"hosts":["httpbin"],"http":[{"route":[{"destination":{"host":"httpbin"},"weight":100}]}]}}
  creationTimestamp: "2020-11-16T09:16:45Z"
  generation: 1
  managedFields:
  - apiVersion: networking.istio.io/v1alpha3
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
      f:spec:
        .: {}
        f:hosts: {}
        f:http: {}
    manager: kubectl
    operation: Update
    time: "2020-11-16T09:16:45Z"
  name: httpbin
  namespace: default
  resourceVersion: "6043091"
  selfLink: /apis/networking.istio.io/v1beta1/namespaces/default/virtualservices/httpbin
  uid: 26d93e2e-73b6-478d-b44e-68a4c8c9d250
spec:
  hosts:
  - httpbin
  http:
  - route:
    - destination:
        host: httpbin
      weight: 100
